cli/tests/snapshots/help__help_balance.snap
---
source: cli/tests/help.rs
expression: "help(&[\"balance\"])"
---
Balance data across devices, or change block groups using filters.

Rebalance data and metadata across devices to improve performance or recover space. Balance is
typically a long-running operation. You can pause, resume, or cancel a balance in progress. Progress
and status can be queried at any time. Requires CAP_SYS_ADMIN.

Usage: balance <COMMAND>

Commands:
  start   Balance chunks across the devices
  pause   Pause a running balance operation
  cancel  Cancel a running balance operation
  resume  Resume a paused balance operation
  status  Show status of running or paused balance operation
  help    Print this message or the help of the given subcommand(s)

Options:
  -h, --help
          Print help (see a summary with '-h')
