cli/tests/snapshots/help__help_balance_cancel.snap
---
source: cli/tests/help.rs
expression: "help(&[\"balance\", \"cancel\"])"
---
Cancel a running balance operation

Usage: cancel <PATH>

Arguments:
  <PATH>
          

Options:
  -h, --help
          Print help
