cli/tests/snapshots/help__help_balance_pause.snap
---
source: cli/tests/help.rs
expression: "help(&[\"balance\", \"pause\"])"
---
Pause a running balance operation

Usage: pause <PATH>

Arguments:
  <PATH>
          

Options:
  -h, --help
          Print help
