cli/tests/snapshots/help__help_balance_resume.snap
---
source: cli/tests/help.rs
expression: "help(&[\"balance\", \"resume\"])"
---
Resume a paused balance operation

Usage: resume <PATH>

Arguments:
  <PATH>
          

Options:
  -h, --help
          Print help
