cli/tests/snapshots/help__help_device.snap
---
source: cli/tests/help.rs
expression: "help(&[\"device\"])"
---
Manage devices in a btrfs filesystem.

Perform operations on block devices that are part of a btrfs filesystem, including adding and
removing devices, viewing device statistics, and checking device readiness. Most operations require
CAP_SYS_ADMIN.

Usage: device <COMMAND>

Commands:
  add     Add one or more devices to a mounted filesystem
  remove  Remove one or more devices from a mounted filesystem
  delete  Remove one or more devices from a mounted filesystem
  stats   Show device I/O error statistics for all devices of a filesystem
  scan    Scan or unregister devices for multi-device btrfs filesystems
  ready   Check whether all devices of a multi-device filesystem are present
  usage   Show detailed information about internal allocations in devices
  help    Print this message or the help of the given subcommand(s)

Options:
  -h, --help
          Print help (see a summary with '-h')
