cli/tests/snapshots/help__help_device_add.snap
---
source: cli/tests/help.rs
expression: "help(&[\"device\", \"add\"])"
---
Add one or more devices to a mounted filesystem

The device must not be mounted and should not contain a filesystem or other data. The operation
requires CAP_SYS_ADMIN.

Usage: add [OPTIONS] <DEVICES>... <TARGET>

Arguments:
  <DEVICES>...
          One or more block devices to add

  <TARGET>
          Mount point of the target filesystem

Options:
  -f, --force
          Force overwrite of an existing filesystem on the device

  -K, --nodiscard
          Do not perform whole device TRIM (discard) before adding

      --enqueue
          Wait if there's another exclusive operation running, instead of returning an error

  -h, --help
          Print help (see a summary with '-h')
